...
        android:scaleType="center"
        android:scaleX="2"
        android:scaleY="2"
        app:srcCompat="@mipmap/gfree_logo" />

    <EditText
        android:id="@+id/loginEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginLogoImageView"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/loginPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginEmailTextView"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/confirmLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPasswordTextView"
        android:layout_marginTop="50dp"
        android:text="Login" />
</RelativeLayout>
