...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/design_default_color_primary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
...
                            android:text="Packet Scanner"
                            android:textAlignment="center"
                            android:textColor="@color/design_default_color_primary"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/dashboard_restaurant_review_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@color/design_default_color_on_primary"
                            android:padding="5dp"
                            android:text="Restaurant Review"
                            android:textAlignment="center"
                            android:textColor="@color/design_default_color_primary"
                            android:textSize="24sp" />
                    </TableRow>

                    <TableRow
...
                </TableLayout>

            </FrameLayout>
        </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

...
