...
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">"Open navigation drawer"</string>
    <string name="navigation_drawer_close">"Close navigation drawer"</string>
    <string name="contact_information">Contact Information</string>
    <string name="contact_explanation">Should you need to contact me directly just send me an email.</string>
    <string name="my_email">maxdelaney16@gmail.com</string>
</resources>
