<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantReviewPackage.EditRestaurantReviewActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_review_optional_description"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:ems="8"
        android:gravity="center_horizontal"
        android:hint="Optional review details..."
        android:inputType="textMultiLine"
        android:maxEms="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_review_restaurant_RatingBar" />

    <EditText
        android:id="@+id/edit_review_resteraunt_name_EditText"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:ems="8"
        android:gravity="center_horizontal"
        android:hint="Restaurant Name"
        android:inputType="textMultiLine|textPersonName"
        android:maxEms="8"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_review_TextView"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_marginTop="36dp"
        android:text="Restaurant Rating"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_review_resteraunt_name_EditText" />

    <RatingBar
        android:id="@+id/edit_review_restaurant_RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_horizontal"
        android:max="5"
        android:numStars="5"
        android:rating="2.5"
        android:stepSize=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_review_TextView" />

    <Button
        android:id="@+id/submit_edited_review_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="248dp"
        android:onClick="editRestaurantReview"
        android:text="Submit Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_review_optional_description" />

</androidx.constraintlayout.widget.ConstraintLayout>